Set large height for body[overflow:hidden] - fix showing the modal for mobile devices

--- a/src/sweetalert2.scss
+++ b/src/sweetalert2.scss
@@ -25,6 +25,7 @@ $transparent: rgba($black, 0);
 
 body {
   &.swal2-in {
+    height: 999999999px;
     overflow-y: hidden;
   }
 
